# shadeadmin

./: Cargo copy.toml  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
contracts/admin/: Cargo.toml  README.md
contracts/admin/examples/: schema.rs
contracts/admin/schema/: admin.json
contracts/admin/src/: contract.rs
